<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="default_text_string">No data</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="permission_denied">Permission denied!</string>
    <string name="receiving">Receiving!</string>
    <string name="opening_device_failed">Opening USB device failed!</string>
    <string name="claimning_interface_failed">Claiming interface failed!</string>
    <string name="no_in_endpoint_found">No in endpoint found!</string>
    <string name="no_out_endpoint_found">No out endpoint found!</string>
    <string name="no_extra_in_intent">No %1$s extra in intent!</string>
    <string name="device_detaches">Device detached!</string>
    <string name="no_device_found">No device found!</string>
    <string name="found">found!</string>
    <string name="title_exit">Salir</string>
    <string name="message_exit">¿Desea salir de Ejercicio?</string>
    <string name="device_found">Device found!</string>
    <string name="btn_title_next_set">Nex Set</string>

    <string name="app_name">Conexion Arduino V2</string>
    <string name="btn_longin">Member Login</string>
    <string name="btn_register">Register Now</string>
    <string name="btn_guest">Login as Guest</string>
    <string name="text_hint_user">User</string>
    <string name="text_hint_password">Password</string>
    <string name="text_hint_confirm_password">Confirm Passwrod</string>
    <string name="text_radiobutton_ft">Ft</string>
    <string name="text_radiobutton_cm">Cm</string>
    <string name="text_register">Register</string>
    <string name="text_login">Login</string>
    <string name="tex_height">Height:</string>
    <string name="message_empty_user_name">Favor de colocar un nombre de Usuario</string>
    <string name="message_empty_password">Favor de colocar una contraseña</string>
    <string name="message_different_password">Favor de colocar la misma contraseña</string>
    <string name="title_activity_select_exercise">SelectExerciseActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="message_user_exits">El usuario ya exite.</string>
    <string name="message_welcome">Bienvenido</string>
    <string name="action_logout">Cerrar Sesión</string>
    <string name="message_user_not_exits">El usuario no está registrado</string>
    <string name="message_incorrect_password">Contraseña incorrecta</string>
    <string name="text_btn_view_recommended">View Recommended Adjustments</string>
    <string name="title_select_exercise">SELECT EXERCISE</string>
    <string name="title_activity_e">E</string>
    <string name="title_activity_history_exercises">HistoryExercisesActivity</string>
    <string name="title_activity_exercise">ExerciseActivity</string>
    <string name="tex_history">History</string>
    <string name="btn_new_set">New Set</string>
    <string name="text_date">Date</string>
    <string name="text_weight">Weight</string>
    <string name="btn_repeat_set">Repeat Set</string>
    <string name="text_title_loaded_weight">Enter Loaded Weight:</string>
    <string name="text_title_loaded_max_weight">Max. Allowable Weight 720 lb</string>

    <string name="text_key_1">1</string>
    <string name="text_key_2">2</string>
    <string name="text_key_3">3</string>
    <string name="text_key_4">4</string>
    <string name="text_key_5">5</string>
    <string name="text_key_6">6</string>
    <string name="text_key_7">7</string>
    <string name="text_key_8">8</string>
    <string name="text_key_9">9</string>
    <string name="text_key_0">0</string>
    <string name="text_key_clear">Clear</string>
    <string name="btn_title_start">Start</string>
    <string name="lb">lb</string>
    <string name="title_loaded_weight">Enter Loaded Weight:</string>
    <string name="select_exercise">Seleccione un Ejercicio</string>
    <string name="btn_exit">Exit</string>
    <string name="select_training">Seleccione un entrenamiento</string>
    <string name="title_table_weight">Weight</string>
    <string name="title_table_num_rep">Rep. \nCounter</string>

    <string name="repetition">Rep</string>
    <string name="weight">Weigth</string>
    <string name="input_weight">Input Weight</string>

    <string name="warning_message_weight">Coloque un peso menor o igual a 720 lb</string>
    <string name="warning_message_weight_max_dia">Coloque un peso menor o igual a </string>
    <string name="warning_message_weight_min_dia">Coloque un peso mayor o igual a </string>
    <string name="warning_message_weight_min">Coloque un peso un peso mayor a </string>
    <string name="warning_message_weight_min_pos">Coloque un peso mayor o igual a 2 lb</string>
    <string name="warning_message_weight_min_neg">Coloque un peso negativo en la celda anterior mayor o igual a 2 lb</string>
    <string name="title_select_training">SELECT TRAINING SYSTEM</string>
    <string name="warning_message_weight_previous">Coloque un peso en la celda anterior.</string>

    <string name="title_dialog_weight">Weight</string>
    <string name="title_loaded_weight_dia">Enter Weight:</string>
    <string name="title_loaded_max_weight_dia">Max. Allowable Weight</string>
    <string name="title_loaded_min_weight_dia">Min. Allowable Weight</string>

    <string name="title_table_negative_weight">Negative</string>
    <string name="title_table_positive_weight">Positive</string>

    <string name="message_no_more_weight">No se puede colocar otro peso</string>
    <string name="message_select_trainig">Por favor elija un tipo de Entrenamiento</string>
    <string name="warning_message_weight_min_drop_neg">Coloque un peso mayor o igual a 5 lb</string>
    <string name="text_hint_name_exercise">Exercise Name</string>
    <string name="title_other_excercise">Other Exercise</string>

    <string name="message_other_exercise">Por favor coloque el nombre de su ejercicio</string>
    <string name="btn_view_set">View Set</string>
    <string name="text_reps">Reps.</string>
    <string name="tex_name_exercise">Name</string>
    <string name="text_warm_up_session">Warm Up Session</string>
    <string name="text_start">Start</string>
    <string name="text_exit">Exit</string>
    <string name="text_warming_up">Warming up</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_like_to_warming_up_again">Would you like warming up again?</string>
    <string name="title_activity_view_set">ViewSetActivity</string>
    <string name="text_training_system">Training System</string>
    <string name="text_loaded_weight">Loaded Weight</string>
    <string name="text_like_to_warm_up">Would you like to warm up?</string>
    <string name="title_table_executed_reps">Executed Reps.</string>
    <string name="message_lost_connection">Lost connection</string>
    <string name="message_username_invalidate">Nombre de Usuario Inválido</string>
    <string name="message_relocate_user_name">Error!!! Favor de volver a colocar su Nombre de Usuario.</string>
    <string name="text_new_exercise">New Exercise</string>
    <string name="text_want_new_exercise">Are you sure you want to do a new exercise?</string>
    <!--<string name="text_like_to_training_session">Would you like to training Session?</string>-->
    <string name="text_training_session">Training Session</string>
    <string name="text_training_machine">Training the Machine</string>
    <string name="tex_not_member">Not a member yet?</string>

</resources>
