<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewDialogLoadedWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/back_title_selec_excer"
            android:padding="8dp"
            android:text="@string/title_loaded_weight"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/grey_white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewMinMaxDialogWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewDialogLoadedWeight"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_centerHorizontal="true"
            android:text="@string/title_loaded_min_weight_dia"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />




        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textViewMinMaxDialogWeight"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="16dp"
            android:stretchColumns="*"
            tools:ignore="RtlHardcoded">


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btn_dia_key_7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/back_btn_keys"
                    android:singleLine="true"
                    android:text="@string/text_key_7"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btn_dia_key_8"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/back_btn_keys"
                    android:singleLine="true"
                    android:text="@string/text_key_8"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btn_dia_key_9"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/back_btn_keys"
                    android:singleLine="true"
                    android:text="@string/text_key_9"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />

            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btn_dia_key_4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/back_btn_keys"
                    android:singleLine="true"
                    android:text="@string/text_key_4"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btn_dia_key_5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/back_btn_keys"
                    android:singleLine="true"
                    android:text="@string/text_key_5"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btn_dia_key_6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/back_btn_keys"
                    android:singleLine="true"
                    android:text="@string/text_key_6"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btn_dia_key_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/back_btn_keys"
                    android:singleLine="true"
                    android:text="@string/text_key_1"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btn_dia_key_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/back_btn_keys"
                    android:singleLine="true"
                    android:text="@string/text_key_2"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btn_dia_key_3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/back_btn_keys"
                    android:singleLine="true"
                    android:text="@string/text_key_3"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />

            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <Button
                    android:id="@+id/btn_dia_key_0"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/back_btn_keys"
                    android:singleLine="true"
                    android:text="@string/text_key_0"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btn_dia_key_clear"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:background="@drawable/back_btn_keys"
                    android:singleLine="true"
                    android:text="@string/text_key_clear"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />

            </TableRow>


        </TableLayout>


    </RelativeLayout>

</ScrollView>





