<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin_login">

    <EditText
        android:id="@+id/editTextUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_edittext_top"
        android:hint="@string/text_hint_user"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_edittext_top"
        android:hint="@string/text_hint_password"
        android:inputType="textVisiblePassword" />

    <EditText
        android:id="@+id/editTextConfirmPassWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_edittext_top"
        android:hint="@string/text_hint_confirm_password"
        android:inputType="textVisiblePassword" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_edittext_top">


        <TextView
            android:id="@+id/textViewTitleHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/tex_height"
            android:textAppearance="?android:textAppearanceMedium" />

        <Spinner
            android:id="@+id/spinnerHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_toEndOf="@+id/textViewTitleHeight"
            android:layout_toRightOf="@+id/textViewTitleHeight"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" />

        <RadioGroup
            android:id="@+id/radioGroupUnits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:layout_toEndOf="@+id/spinnerHeight"
            android:layout_toRightOf="@+id/spinnerHeight"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonCm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:checked="true"
                android:text="@string/text_radiobutton_cm" />

            <RadioButton
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp"
                android:id="@+id/radioButtonFt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_radiobutton_ft" />
        </RadioGroup>


    </RelativeLayout>
</LinearLayout>