<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:weightSum="6"
    tools:context="com.google.android.gms.example.conexionarduinov2.ui.ExerciseActivity">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:paddingBottom="4dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/back_title_selec_excer"
            android:padding="8dp"
            android:singleLine="true"
            android:text="@string/title_select_training"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/grey_white"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/listViewTraining"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/spaceCenter"
            android:layout_below="@+id/textView"
            android:choiceMode="singleChoice" />

        <Space
            android:id="@+id/spaceCenter"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_centerVertical="true"
            android:clickable="false"
            android:focusable="false" />


        <ScrollView
            android:id="@+id/scrollViewLoadedWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/buttonStart"
            android:layout_alignTop="@+id/spaceCenter">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textViewLoadedWeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/back_title_selec_excer"
                    android:padding="8dp"
                    android:text="@string/text_title_loaded_weight"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/grey_white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewMaxWeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textViewLoadedWeight"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:text="@string/text_title_loaded_max_weight"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/textViewMaxWeight"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginTop="4dp"
                    android:stretchColumns="*"
                    tools:ignore="RtlHardcoded">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Button
                            android:id="@+id/btn_key_7"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/back_btn_keys"
                            android:singleLine="true"
                            android:text="@string/text_key_7"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textStyle="bold"
                            tools:ignore="ButtonStyle" />

                        <Button
                            android:id="@+id/btn_key_8"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/back_btn_keys"
                            android:singleLine="true"
                            android:text="@string/text_key_8"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textStyle="bold"
                            tools:ignore="ButtonStyle" />

                        <Button
                            android:id="@+id/btn_key_9"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/back_btn_keys"
                            android:singleLine="true"
                            android:text="@string/text_key_9"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textStyle="bold"
                            tools:ignore="ButtonStyle" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Button
                            android:id="@+id/btn_key_4"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/back_btn_keys"
                            android:singleLine="true"
                            android:text="@string/text_key_4"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textStyle="bold"
                            tools:ignore="ButtonStyle" />

                        <Button
                            android:id="@+id/btn_key_5"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/back_btn_keys"
                            android:singleLine="true"
                            android:text="@string/text_key_5"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textStyle="bold"
                            tools:ignore="ButtonStyle" />

                        <Button
                            android:id="@+id/btn_key_6"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/back_btn_keys"
                            android:singleLine="true"
                            android:text="@string/text_key_6"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textStyle="bold"
                            tools:ignore="ButtonStyle" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Button
                            android:id="@+id/btn_key_1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/back_btn_keys"
                            android:singleLine="true"
                            android:text="@string/text_key_1"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textStyle="bold"
                            tools:ignore="ButtonStyle" />

                        <Button
                            android:id="@+id/btn_key_2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/back_btn_keys"
                            android:singleLine="true"
                            android:text="@string/text_key_2"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textStyle="bold"
                            tools:ignore="ButtonStyle" />

                        <Button
                            android:id="@+id/btn_key_3"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/back_btn_keys"
                            android:singleLine="true"
                            android:text="@string/text_key_3"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textStyle="bold"
                            tools:ignore="ButtonStyle" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">


                        <Button
                            android:id="@+id/btn_key_0"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/back_btn_keys"
                            android:singleLine="true"
                            android:text="@string/text_key_0"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textStyle="bold"
                            tools:ignore="ButtonStyle" />

                        <Button
                            android:id="@+id/btn_key_clear"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_span="2"
                            android:background="@drawable/back_btn_keys"
                            android:singleLine="true"
                            android:text="@string/text_key_clear"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textStyle="bold"
                            tools:ignore="ButtonStyle" />

                    </TableRow>


                </TableLayout>


            </RelativeLayout>


        </ScrollView>

        <Button
            android:id="@+id/buttonStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/back_btn_login"
            android:padding="16dp"
            android:text="@string/btn_title_start"
            android:textSize="28sp"
            android:textStyle="bold" />


    </RelativeLayout>


    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:paddingBottom="4dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="8dp">

        <Button
            android:id="@+id/buttonWarmUpSession"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@drawable/back_btn_login"
            android:padding="12dp"
            android:text="@string/text_warm_up_session"
            android:textSize="24sp"
            android:textStyle="bold" />


        <FrameLayout
            android:id="@+id/containerTraining"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp" />


        <Button
            android:id="@+id/buttonExit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/back_btn_login"
            android:padding="16dp"
            android:text="@string/btn_exit"
            android:textSize="28sp"
            android:textStyle="bold" />

    </RelativeLayout>

</LinearLayout>
