<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:shrinkColumns="*"
        android:stretchColumns="*"
        tools:ignore="UselessParent">

        <TableRow
            android:layout_gravity="center_horizontal"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:background="@drawable/btn_background"
                android:padding="16dp"
                android:singleLine="true"
                android:text="@string/btn_longin"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/buttonRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:background="@drawable/btn_background"
                android:padding="16dp"
                android:singleLine="true"
                android:text="@string/btn_register"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/buttonGuest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:background="@drawable/btn_background"
                android:padding="16dp"
                android:singleLine="true"
                android:text="@string/btn_guest"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                tools:ignore="ButtonStyle" />
        </TableRow>
    </TableLayout>



</RelativeLayout>